# InsightSQL-AI

./: .gitignore  README.md  prueba.html
backend/: README.md  app.py  db.sqlite3  env.example  requirements.txt  start_mcp_server.ps1  test_api.py
backend/app/: main.py
backend/app/agent/: llm.py  pipeline.py  prompt.py  schemas.py
backend/app/api/: chat.py  datasource.py
backend/app/core/: config.py  database.py
backend/app/mcp/: __init__.py  client.py  exceptions.py
backend/app/middleware/: cors.py
backend/app/schemas/: chat.py
backend/app/services/: __init__.py  query_service.py  runtime.py  schema_service.py
backend/backend_project/: settings.py  urls.py
backend/dab/: client.py  dab-config.json  docker-compose.yml  docker-instructions.md  roles.json
backend/db/: schema-docs.json
backend/main_app/: views.py
backend/main_app/services/: azure_openai.py
frontend/: api.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/components/: Header.jsx  QueryForm.jsx  Results.jsx  Sidebar.jsx
frontend/layout/: MainLayout.jsx
frontend/pages/: Dashboard.jsx  History.jsx
frontend/router/: AppRouter.jsx
frontend/src/: App.jsx
frontend/utils/: keywordsAnaliticas.js
mcp/: .env.example  README.md  mcp_client.py  pyproject.toml
mcp/scripts/: smoke_test_mcp.py
mcp/src/: __init__.py  param_validator.py  server.py  sql_validator.py
mcp/src/services/: __init__.py  connection_manager.py  db_connection.py  export_service.py  postgres_connection.py
mcp/src/tools/: __init__.py  connection_tools.py  ddl_tools.py  fabric_tools.py  postgres_tools.py  sql_tools.py
sql/: .gitignore  download_olist.sh  instructions.md  requirements.txt  schema.md  schema.sql  seed_olist.py  verify_seed.sql
